--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 html {
-  box-sizing: border-box;
+ 	box-sizing: border-box;
 }
 *, *:before, *:after {
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: "Roboto", sans-serif;
 }
